syntax = "proto3";

option go_package = "github.com/wittano/komputer";
import "google/protobuf/empty.proto";
import "proto/request.proto";
package komputer;

enum Type {
  SINGLE = 0;
  TWO_PART = 1;
}

enum Category {
  PROGRAMMING = 0;
  MISC = 1;
  DARK = 2;
  YOMAMA = 3;
  Any = 4;
}

message Joke {
  komputer.ObjectID id = 1;
  string answer = 2;
  optional string question = 3;
  Type type = 4;
  Category category = 5;
  string guild_id = 6;
}

message JokeID {
  oneof id {
    uint64 api_id = 1;
    bytes object_id = 2;
  }
}

message JokeParams {
  optional komputer.ObjectID id = 1;
  optional Category category = 2;
  optional Type type = 3;
}

message JokeParamsPagination {
  optional komputer.ObjectID id = 1;
  optional Category category = 2;
  optional Type type = 3;
  Pagination page = 4;
}

service JokeService {
  rpc Find(JokeParams) returns (Joke);
  rpc FindAll(JokeParamsPagination) returns (stream Joke);
  rpc Add(Joke) returns (JokeID);
  rpc Remove(komputer.ObjectID) returns (google.protobuf.Empty);
}